--- a/src/elements/Walls/SimpleWall/index.html
+++ b/src/elements/Walls/SimpleWall/index.html
@@ -111,16 +111,16 @@
   wall.startPoint.x = 0;
   wall.startPoint.y = -15;
   wall.endPoint.x = 0;
-  wall.endPoint.y = 20;
+  wall.endPoint.y = 0;
   wall.update(true);
 
   wall2.startPoint.x = 35;
-  wall2.startPoint.y = 15;
-  wall2.endPoint.x = -35;
-  wall2.endPoint.y = 15;
+  wall2.startPoint.y = -15;
+  wall2.endPoint.x = 3;
+  wall2.endPoint.y = -15;
   wall2.update(true);
 
-  wall.addCorner(wall2, true); //at the end point => true
+  wall.addCorner(wall2, false); //at the end point => true
   wall.update(true);
 
   window.addEventListener("keydown", () => {
